End of mainPage

--- a/index.html
+++ b/index.html
@@ -29,32 +29,36 @@
   <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="#">Эхо войны</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  	<a class="navbar-brand" href="http://nauchpochmak.tk">Эхо конфликтов</a>
+  	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar1" aria-controls="navbar1" aria-expanded="false" aria-label="Toggle navigation">
+    	<span class="navbar-toggler-icon"></span>
+  	</button>
+
+  	<div class="collapse navbar-collapse" id="navbar1">
+    	<ul class="navbar-nav mr-auto">
+      		<li class="nav-item active">
+        		<a class="nav-link" href="http://nauchpochmak.tk">Главная <span class="sr-only">(current)</span></a>
+      		</li>
+		    <li class="nav-item">
+		    	<a class="nav-link" href="#">Link</a>
+		    </li>
+      		<li class="nav-item dropdown">
+        		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+        		<div class="dropdown-menu" aria-labelledby="navbarDropdown1">
+          			<a class="dropdown-item" href="#">Action</a>
+          			<a class="dropdown-item" href="#">Another action</a>
+          			<div class="dropdown-divider"></div>
+          			<a class="dropdown-item" href="#">Something else here</a>
+        		</div>
+      		</li>
+    	</ul>
+    	<form class="form-inline my-2 my-lg-0">
+      		<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      		<button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+    	</form>
+  	</div>
+</nav>
 
     <header>
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -94,11 +98,16 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
+			
+	<img src="img/bot_split.jpg" class="bottom_split">
       </div>
     </header>
+ 
 
     <!-- Page Content -->
-<div class="row"> 
+<div style="margin-left:5vw;">
+
+<div class="row" style="width:100%; "> 
 
 
 <div class="col-md-3" style="background-color:transparent; border-right: 0.2px solid #c0c0c0;">
@@ -136,10 +145,8 @@
 				
 	
 	</div>
-
-
-
 </div>
+
 
 
 <div class="col-md-6" style="background-color:transparent;border-right: 0.2px solid #c0c0c0;"> 
@@ -242,6 +249,8 @@
 
 </div>
 
+ </div>
+ 
  </div>
 
 
