Подправлены мелкие вещи

--- a/post.html
+++ b/post.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
   <head>
-  
+
     <meta charset="utf-8">
-  
+
   	<meta name="robots" content="noindex,nofollow">
-	  
+
 	<link rel="icon" type="image/png" href="favicon/favicon_16x16.png" sizes="16x16">
 	<link rel="icon" type="image/png" href="favicon/favicon_32x32.png" sizes="32x32">
 	<link rel="icon" type="image/png" href="favicon/favicon_64x64.png" sizes="64x64">
@@ -25,13 +25,13 @@
     <link href="css/full-slider.css" rel="stylesheet">
 
   </head>
-  
-  
+
+
   <body>
      <!-- Navigation -->
-	 
-	 
-	 
+
+
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   	<a class="navbar-brand" href="http://nauchpochmak.tk">Эхо конфликтов</a>
   	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar1" aria-controls="navbar1" aria-expanded="false" aria-label="Toggle navigation">
@@ -66,14 +66,14 @@
 
     <header>
 
-<div  class="head_topic_class"> 
+<div  class="head_topic_class">
 
 
 <h1 class="text_position_post"> Брусиловский прорыв</h1>
 
 <p class="text_position_post">
 
-Там был этот Брусилов и он короче прорвал бла бла 
+Там был этот Брусилов и он короче прорвал бла бла
 балал бал
 </p>
 
@@ -86,14 +86,14 @@
 
 <hr >
 
-  
-  
+
+
       <!-- Page Content -->
 	  <div style="margin-left:5vw;">
-	  <div class="row" style="width:100%; "> 
+	  <div class="row" style="width:100%; ">
 <div class="col-md-6" style="background-color:transparent; border-right: 0.2px solid #c0c0c0;">
-	
-	<p> 
+
+	<p>
 	Зелёная книга» (англ. The Green Book) — краткое название ежегодного путеводителя для чернокожих автомобилистов, который издавался в США с 1936 по 1966 год, первоначально под полным названием «Зелёная книга негритянского автомобилиста»[К 1] (The Negro Motorist Green Book), затем — под названиями «Зелёная книга чернокожих путешественников» (The Negro Travelers’ Green Book) и «Зелёная книга путешественников» (The Travelers’ Green Book)[1]. Справочник был составлен почтовым служащим из Нью-Йорка Виктором Хьюго Грином[en] (1892—1960), после смерти которого публикацию продолжила его вдова Элма Грин[2]. Книга издавалась в эпоху законов Джима Кроу[К 2], когда на Юге США была узаконена сегрегация, а в штатах Севера открыто практиковалась дискриминация чернокожих. Несмотря на широкое распространение расовой дискриминации и бедности, которые ограничивали владение автомобилями среди чернокожих, представители зарождавшегося афроамериканского среднего класса покупали машины. На дороге они сталкивались с различными опасностями и неудобствами — от отказа в обслуживании до произвольного ареста. В ответ Грин составил собственный путеводитель по местам, относительно дружественным к афроамериканцам.
 
 Грин вскоре расширил географию своего путеводителя, ориентированного в первом издании 1936 года лишь на Нью-Йоркскую агломерацию, — справочник охватил большую часть Северной Америки, включая территории Соединённых Штатов, частично Канады, Мексики, Карибского бассейна и Бермудских островов[3]. Впоследствии автор открыл собственное туристическое агентство. «Зелёная книга», мало известная за пределами афроамериканского сообщества, стала «„библией“ путешествий чернокожих во времена Джима Кроу»[4], позволяла находить ночлег, различные сервисы и автозаправочные станции, которыми путешественники могли бы беспрепятственно воспользоваться. Вскоре после принятия Закона о гражданских правах 1964 года[en], который пресекал попытки расовой дискриминации в американском обществе, книга утратила свою актуальность, и её публикация прекратилась. Интерес к книге возродился в начале XXI века в связи с исследованиями поездок чернокожих автомобилистов в эпоху «законов Джима Кроу».
@@ -119,23 +119,22 @@
 Джордж Скайлер[en] писал в 1943 году: «Многие цветные семьи объездили всю территорию Соединённых Штатов, лишённые возможности переночевать хотя бы в одном туристическом лагере или гостинице». Он предположил, что чернокожим американцам легче путешествовать за границей, чем по своей собственной стране[17]. Джон Клэр Дрейк[en] и Гораций Кэйтон[en] в 1945 году описывали обстановку в Чикаго, утверждая, что «управляющие гостиницами города по общему соглашению не позволяли неграм использовать гостиничные помещения, в особенности спальные»[18]. Один из инцидентов, описываемых Дрейком и Кэйтоном, иллюстрирует дискриминацию по расовому признаку, с которой сталкивались чёрные в смешанных группах:
 
 «	Две цветные школьные учительницы и несколько белых друзей почтили своим присутствием обед в привилегированной кофейне. Негритянкам разрешили сесть, но официантка проигнорировала их и обслужила белых женщин. Одна из цветных женщин запротестовала, и ей сказали, что она может поесть на кухне[19].	</p>
-	
-	
+
+
 	</div>
 	
-	
+
 <div class="col-md-6" style="background-color:transparent; border-right: 0.2px solid #c0c0c0;">
-	  
+
 	  <p style="text-align: center;"> <strong>Статьи дня </strong></p>
-	  
+
 	  <div class="d-flex flex-row bd-highlight mb-2">
 
 
 
-<img src="https://upload.wikimedia.org/wikipedia/commons/7/72/IraqWarHeader.jpg" alt="" width=180px height=180px vspace="4" hspace="4"> 
+<img src="https://upload.wikimedia.org/wikipedia/commons/7/72/IraqWarHeader.jpg" alt="" width=180px height=180px vspace="4" hspace="4">
 
-<h2> Привет АБЭМА, я ирак
-тест обтекания
+<h2> обтекания
 обтекания обтекания
 
 
@@ -149,10 +148,9 @@
 
 
 
-<img src="https://upload.wikimedia.org/wikipedia/commons/7/72/IraqWarHeader.jpg" alt="" width=180px height=180px  vspace="4" hspace="4"> 
+<img src="https://upload.wikimedia.org/wikipedia/commons/7/72/IraqWarHeader.jpg" alt="" width=180px height=180px  vspace="4" hspace="4">
 
-<h2> Привет АБЭМА, я ирак
-тест обтекания
+<h2> обтекания
 обтекания обтекания
 
 
@@ -166,10 +164,9 @@
 
 
 
-<img src="https://upload.wikimedia.org/wikipedia/commons/7/72/IraqWarHeader.jpg" alt="" width=180px height=180px  vspace="4" hspace="4"> 
+<img src="https://upload.wikimedia.org/wikipedia/commons/7/72/IraqWarHeader.jpg" alt="" width=180px height=180px  vspace="4" hspace="4">
 
-<h2> Привет АБЭМА, я ирак
-тест обтекания
+<h2> обтекания
 обтекания обтекания
 
 
@@ -178,19 +175,19 @@
 </div>
 
 
-	  
-	  
-  
+
+
+
   </div>
-  
+
   </div>
-  
-  
-  
-  
-  
-  
-  
+
+
+
+
+
+
+
       <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
